add bulma css & template engine (handlebars)

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
-<h2>Main Page</h2>
-
-<h3>Users</h3>
-
-{{#each users as |user|}}
-    <p>{{this.username}}</p>
-{{/each}}
+<h1 class="title">
+    Hello World
+</h1>
+<p class="subtitle">
+    My first website with
+    <strong>Bulma</strong>!
+</p>
