--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,64 +1,69 @@
-<html lang="en">
+<html>
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-            crossorigin="anonymous"
-        />
-        <title>Bootstrap demo</title>
+        <title>Hello Bulma!</title>
+        {{! <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"> }}
+        <link rel="stylesheet" href="/bulma.css" />
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="">realApp</a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
+
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="">
+                    <img
+                        src="https://bulma.io/images/bulma-logo.png"
+                        width="112"
+                        height="28"
+                    />
+                </a>
+
+                <a
+                    role="button"
+                    class="navbar-burger"
+                    aria-label="menu"
                     aria-expanded="false"
-                    aria-label="Toggle navigation"
+                    data-target="navbarBasicExample"
                 >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div
-                    class="collapse navbar-collapse"
-                    id="navbarSupportedContent"
-                >
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a
-                                class="nav-link"
-                                aria-current="page"
-                                href="/"
-                            >Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/posts">Content</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <div>
-                            <a class="btn btn-outline-primary" href="/signup">Sign Up</a>
-                            <a class="btn btn-primary" href="/signin">Sign In</a>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
+
+            <div id="navbarBasicExample" class="navbar-menu">
+                <div class="navbar-start">
+                    <a href="/" class="navbar-item">
+                        Home
+                    </a>
+
+                    <a href="/posts" class="navbar-item">
+                        Blog
+                    </a>
+                </div>
+
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                        <div class="buttons">
+                            <a href="/signup" class="button is-primary">
+                                <strong>Sign up</strong>
+                            </a>
+                            <a href="/login" class="button is-light">
+                                Log in
+                            </a>
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </nav>
 
-        <div class="container">
-            {{{body}}}
-        </div>
+        <section class="section">
+            <div class="container">
+                {{{body}}}
+            </div>
+        </section>
+        <script>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-            crossorigin="anonymous"
-        ></script>
+        </script>
     </body>
 </html>
