--- a/views/users/signup.hbs
+++ b/views/users/signup.hbs
@@ -1,7 +1,11 @@
 <div class="title">
-  <h2 class="title is-2">Signup Page</h2>
+    <h2 class="title is-2">Signup Page</h2>
 </div>
 <form action="/signup" method="POST">
+    <div class="field">
+        <label class="label" for="name">Name</label>
+        <input class="input" type="text" name="name" id="name" />
+    </div>
     <div class="field">
         <label class="label" for="email">Email</label>
         <input class="input" type="email" name="email" id="email" />
@@ -11,6 +15,6 @@
         <input class="input" type="password" name="password" id="password" />
     </div>
     <div class="control">
-      <button class="button is-primary" type="submit">Sign Up</button>
+        <button class="button is-primary" type="submit">Sign Up</button>
     </div>
 </form>
