--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,18 +1,47 @@
-<div class="container">
-    <section class="section">
-        <h2 class="title is-2">Sign Up Page</h2>
-    </section>
-    <section>
-        <form action="">
-            <label class="label" for="name">Name</label>
-            <input class="input " type="text" required />
-            <label class="label" for="email">email</label>
-            <input class="input" type="email" required />
-            <label class="label" for="password">Password</label>
-            <input class="input" type="password" required />
-        </form>
-    </section>
+<h2 class="title is-2">Sign Up Page</h2>
+<form>
+    <label class="label" for="name">Name</label>
+    <input class="input" name="name" type="text"  />
+    <label class="label" for="email">email</label>
+    <input class="input" name="email" type="email"  />
+    <label class="label" for="password">Password</label>
+    <input class="input" name="password" type="password"  />
     <div>
         <button class="button is-success">Sign Up</button>
     </div>
-</div>
+           
+</form>
+
+
+<script>
+    const form = document.querySelector('form')
+
+    form.addEventListener('submit', async (e) => {
+        e.preventDefault()
+
+        // Get data
+        const name = form.name.value
+        const email = form.email.value
+        const password = form.password.value
+
+        try {
+            const res = await fetch('/signup', { 
+                method: 'POST', 
+                body: JSON.stringify({ name, email, password })
+                Headers: {
+                    'Content-Type': 'application/json'
+                }
+            })
+            const data = await res.json()
+            // if(data.Error) return Error
+            console.info({data:data data})
+            if(data) {
+                location.assign('/')
+            }
+        }
+        catch (error) {
+            console.info(error)
+        }
+    })
+
+</script>
