--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,16 +1,43 @@
-<div class="container">
-    <section class="section">
-        <h2 class="title is-2">Sign Up Page</h2>
-    </section>
-    <section>
-        <form action="">
-            <label class="label" for="email">email</label>
-            <input class="input" type="email" required />
-            <label class="label" for="password">Password</label>
-            <input class="input" type="password" required />
-        </form>
-    </section>
-    <div>
-        <button class="button is-success">Login</button>
-    </div>
+<h2 class="title is-2">Sign Up Page</h2>
+<section>
+    <form>
+        <label class="label" for="email">email</label>
+        <input class="input" type="email" name="email" required />
+        <label class="label" for="password">Password</label>
+        <input class="input" type="password" name="password" required />
+        <div>
+            <button class="button is-success">Login</button>
+        </div>
+    </form>
+</section>
 </div>
+
+<script>
+    const login = document.querySelector('form')
+    
+    login.addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        // Get the Value
+        const email = login.email.value;
+        const password = login.password.value;
+
+        try {
+            const res = await fetch('/login', {
+            method: 'POST',
+            headers: { 
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({ email, password })
+        })
+        const data = await res.json()
+            if(data.user) {
+                location.assign('/profile')
+            }
+        }
+        catch (err) {
+            console.info(err)
+        }
+    })
+
+</script>
