--- a/views/login.hbs
+++ b/views/login.hbs
@@ -32,6 +32,7 @@
         })
         const data = await res.json()
             if(data.user) {
+                console.table(data.user)
                 location.assign('/profile')
             }
         }
