--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,9 @@
+
 <html>
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" href="https://bulma.io/images/bulma-logo.png" type="image/x-icon">
         <title>Hello Bulma!</title>
         <link
             rel="stylesheet"
@@ -16,7 +18,7 @@
                     aria-label="main navigation"
                 >
                     <div class="navbar-brand">
-                        <a class="navbar-item" href="https://bulma.io">
+                        <a class="navbar-item" href="/">
                             <img
                                 src="https://bulma.io/images/bulma-logo.png"
                                 width="112"
