refactor: change middleware file (still empty)

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,9 +5,10 @@
         <input class="input" type="email" name="email" required />
         <label class="label" for="password">Password</label>
         <input class="input" type="password" name="password" required />
-        <div>
-            <button class="button is-success">Login</button>
-        </div>
+        <button class="button is-success">
+        Login
+        </button>
+
     </form>
 </section>
 </div>
