--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -7,9 +7,10 @@
         <input class="input" name="email" type="email" required/>
         <label class="label" for="password">Password</label>
         <input class="input" name="password" type="password" required/>
-        <div>
-            <button class="button is-success">Sign Up</button>
-        </div>
+        <button class="button is-success">
+        Signup
+        </button>
+
             
     </form>
 </section>
