--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,22 +44,29 @@
                             <a href="/" class="navbar-item">
                                 Home
                             </a>
-
-                            <a href="/blogs" class="navbar-item">
-                                Blog
-                            </a>
+                            {{#if user}}
+                                <a href="/blogs" class="navbar-item">
+                                    Blog
+                                </a>
+                            {{/if}}
 
                         </div>
 
                         <div class="navbar-end">
                             <div class="navbar-item">
                                 <div class="buttons">
+                                {{#if user}}
+                                    <a href="/logout" class="button is-danger">
+                                        <strong>Logout</strong>
+                                    </a>
+                                {{else}}
                                     <a href="/signup" class="button is-primary">
                                         <strong>Sign up</strong>
                                     </a>
                                     <a href="/login" class="button is-light">
                                         Log in
                                     </a>
+                                {{/if}}
                                 </div>
                             </div>
                         </div>
