--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,6 +56,9 @@
                             <div class="navbar-item">
                                 <div class="buttons">
                                 {{#if user}}
+                                    <a href="/blogs/create" class="button is-success">
+                                        <strong>Create</strong>
+                                    </a>
                                     <a href="/logout" class="button is-danger">
                                         <strong>Logout</strong>
                                     </a>
