--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" href="https://bulma.io/images/bulma-logo.png" type="image/x-icon">
+        <link rel="icon" href="" type="image/x-icon">
         <title>Hello Bulma!</title>
         <link
             rel="stylesheet"
@@ -61,6 +61,9 @@
                                     </a>
                                     <a href="/logout" class="button is-danger">
                                         <strong>Logout</strong>
+                                    </a>
+                                    <a href="/profile" class="button is-warning">
+                                        <strong>Profile</strong>
                                     </a>
                                 {{else}}
                                     <a href="/signup" class="button is-primary">
