--- a/views/blog/blogs.hbs
+++ b/views/blog/blogs.hbs
@@ -1,24 +1,31 @@
-<div class="card">
-  <div class="card-content">
-    <div class="media">
-      <div class="media-left">
-        {{#each article}}
-          
-        <figure class="image is-48x48">
-          <img src="https://loremflickr.com/320/240?random=1" />
-        </figure>
+{{#each article}}
+<section class="field">
+  <div class="card">
+    <div class="card-content">
+      <div class="media">
+        <div class="media-left">
+            
+          <figure class="image is-48x48">
+            <img src="https://loremflickr.com/320/240?random={{this.id}}" />
+          </figure>
+        </div>
+        <div class="media-content">
+              <p class="title is-4">{{this.tittle}}</p>
+              {{!-- <p class="subtitle is-6">{{user.email}} </p>  --}}
+        </div>
       </div>
-      <div class="media-content">
-            <p class="title is-4">{{this.tittle}}</p>
-            {{!-- <p class="subtitle is-6">{{user.email}} </p>  --}}
-      </div>
-    </div>
 
-    <div class="content">
-      {{this.content}}
-      <br>
-      {{!-- <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time> --}}
-      {{/each}}
+      <div class="content">
+        {{this.content}}
+        <br>
+        {{#each this.author}}
+        <h3 class="title is-3">{{this.name}}</h3>
+        {{!-- <h3 class="title is-3">{{this.user}}</h3> --}}
+        {{!-- <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time> --}}
+        {{/each}}
+      </div>
     </div>
   </div>
-</div>
+</section>
+{{/each}}
+
