--- a/views/blog/blogs.hbs
+++ b/views/blog/blogs.hbs
@@ -13,8 +13,10 @@
           <a href="/blogs/{{id}}">
               <p class="title is-4">{{tittle}}</p>
           </a>
-              {{!-- <p class="subtitle is-6">{{user.email}} </p>  --}}
         </div>
+        
+        
+        
       </div>
 
       <div class="content">
@@ -23,7 +25,9 @@
         {{!-- <h3 class="title is-3">{{this.user}}</h3> --}}
         {{!-- <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time> --}}
       </div>
-      <h6 class="title is-6">{{author.name}}</h6>
+
+      <span class="tag is-rounded">Author 👉🏼 {{author.name}}</span>
+      
     </div>
   </div>
 </section>
