--- a/views/blog/create.hbs
+++ b/views/blog/create.hbs
@@ -34,7 +34,7 @@
         })
         const data = await res.json()
             if(data.article) {
-                location.assign('/')
+                location.assign('/blogs')
             }
         }
         catch (err) {
