--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
@@ -62,7 +62,7 @@
                                     <a href="/logout" class="button is-danger">
                                         <strong>Logout</strong>
                                     </a>
-                                    <a href="/profile" class="button is-warning">
+                                    <a href="/profile" class="button is-primary">
                                         <strong>Profile</strong>
                                     </a>
                                 {{else}}
