--- a/views/blog/create.hbs
+++ b/views/blog/create.hbs
@@ -4,8 +4,8 @@
         <label class="label" for="tittle">Tittle</label>
         <input class="input" type="text" name="tittle" required />
         <label class="label" for="content">Content</label>
-        <input class="input" type="text" name="content" required />
-        {{!-- <textarea class="textarea" name="content" id="" cols="30" rows="10"></textarea> --}}
+        {{!-- <input class="input" type="text" name="content" required /> --}}
+        <textarea class="textarea" name="content" id="" cols="30" rows="10"></textarea>
         <button class="button is-success">
             Create Article
         </button>
