--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
     <body>
         <section class="section">
             <nav
-                    class="navbar"
+                    class="navbar is-fixed-top is-transparent"
                     role="navigation"
                     aria-label="main navigation"
                 >
