--- a/views/blog/blogs.hbs
+++ b/views/blog/blogs.hbs
@@ -1,4 +1,4 @@
-{{#article}}
+{{#each article}}
 <section class="field">
   <div class="card">
     <div class="card-content">
@@ -6,7 +6,7 @@
         <div class="media-left">
             
           <figure class="image is-48x48">
-            <img src="https://loremflickr.com/320/240?random={{id}}" />
+            {{!-- <img src="https://loremflickr.com/320/240?random={{id}}" /> --}}
           </figure>
         </div>
         <div class="media-content">
@@ -21,17 +21,25 @@
 
       <div class="content">
         {{content}}
-        <br>
-        {{!-- <h3 class="title is-3">{{this.user}}</h3> --}}
-        {{!-- <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time> --}}
       </div>
-
+      
       <span class="tag is-rounded">Author 👉🏼 {{author.name}}</span>
+      {{#if published}}
+        <span class="tag is-primary is-rounded">Published</span>
+        {{else}}
+        {{!-- <span class="tag is-rounded is-warning">Draft</span> --}}
+        <span class="tag is-warning is-rounded">Draft</span>
+      {{/if}}
       <br>
       <br>
       <div class="buttons is-right">
+        {{!-- <a>
+          <button class="button is-link" id="publish">
+              <span>Publish</span>
+          </button>
+        </a> --}}
         <a href="/blogs/update/{{id}}">
-          <button class="button is-primary" id="update">
+          <button class="button is-primary">
               <span>Edit 📝</span>
           </button>
         </a>
@@ -40,6 +48,28 @@
     </div>
   </div>
 </section>
-{{/article}}
+
+<script>
+  //const blog = document.querySelector('form')
+  const publish = document.getElementById("publish")
+    
+    publish.addEventListener("click", (e) => {
+      e.preventDefault()
+      //alert('publish')
+      
+      const pub = fetch("/blogs/publish/{{id}}", {
+        method: 'PATCH',
+        headers: { 
+                "Content-Type": "application/json"
+            }
+      })
+      const data = pub.json()
+      if(data) {
+        location.assign('/')
+      }
+    })
+</script>
+
+{{/each}}
 
 
