--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,24 @@
-<h1 class="title">
-        Hello World
-      </h1>
-      <p class="subtitle">
-        My first website with <strong>{{message}}</strong>!
-      </p>
+{{#each article}}
+<section class="field">
+  <div class="card">
+    <div class="card-content">
+      <div class="media">
+        <div class="media-left">
+          <figure class="image is-48x48">
+            {{!-- <img src="https://loremflickr.com/320/240?random={{id}}" /> --}}
+          </figure>
+        </div>
+        <div class="media-content">
+          <a href="/article/{{id}}">
+              <p class="title is-4">{{tittle}}</p>
+          </a>
+        </div>
+      </div>
+      <div class="content">
+        {{content}}
+      </div>
+      <span class="tag is-rounded">Author 👉🏼 {{author.name}}</span>
+    </div>
+  </div>
+</section>
+{{/each}}
