--- a/views/blog/blogs.hbs
+++ b/views/blog/blogs.hbs
@@ -3,10 +3,9 @@
   <div class="card">
     <div class="card-content">
       <div class="media">
-        <div class="media-left">
-            
+        <div class="media-left">  
           <figure class="image is-48x48">
-            {{!-- <img src="https://loremflickr.com/320/240?random={{id}}" /> --}}
+            <img src="https://loremflickr.com/320/240?random={{id}}" />
           </figure>
         </div>
         <div class="media-content">
@@ -14,15 +13,10 @@
               <p class="title is-4">{{tittle}}</p>
           </a>
         </div>
-        
-        
-        
       </div>
-
       <div class="content">
         {{content}}
-      </div>
-      
+      </div>     
       <span class="tag is-rounded">Author 👉🏼 {{author.name}}</span>
       {{#if published}}
         <span class="tag is-primary is-rounded">Published</span>
@@ -33,11 +27,6 @@
       <br>
       <br>
       <div class="buttons is-right">
-        {{!-- <a>
-          <button class="button is-link" id="publish">
-              <span>Publish</span>
-          </button>
-        </a> --}}
         <a href="/blogs/update/{{id}}">
           <button class="button is-primary">
               <span>Edit 📝</span>
