--- a/views/blog/update.hbs
+++ b/views/blog/update.hbs
@@ -60,7 +60,7 @@
         })
         const data = await res.json()
             if(data.article) {
-                location.assign('/blogs/{{id}}')
+                location.assign('/blogs')
             }
         }
         catch (err) {
