--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
       <div class="media">
         <div class="media-left">
           <figure class="image is-48x48">
-            {{!-- <img src="https://loremflickr.com/320/240?random={{id}}" /> --}}
+            <img src="https://loremflickr.com/320/240?random={{id}}" />
           </figure>
         </div>
         <div class="media-content">
