--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-<h2 class="title is-2">Sign Up Page</h2>
+<h2 class="title is-2">Login Page</h2>
 <section>
     <form>
         <label class="label" for="email">email</label>
