feat: error handler login and signup

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,9 +2,9 @@
 <section>
     <form>
         <label class="label" for="email">email</label>
-        <input class="input" type="email" name="email" required />
+        <input class="input" type="email" name="email"/>
         <label class="label" for="password">Password</label>
-        <input class="input" type="password" name="password" required />
+        <input class="input" type="password" name="password" />
         <div class="has-text-danger" id="error"></div>
         <br><br>
         <button class="button is-success">
