--- a/views/blog/create.hbs
+++ b/views/blog/create.hbs
@@ -2,10 +2,11 @@
 <section>
     <form>
         <label class="label" for="tittle">Tittle</label>
-        <input class="input" type="text" name="tittle" required />
+        <input class="input" type="text" name="tittle"/>
         <label class="label" for="content">Content</label>
-        {{!-- <input class="input" type="text" name="content" required /> --}}
         <textarea class="textarea" name="content" id="" cols="30" rows="10"></textarea>
+        <div class="has-text-danger" id="error"></div>
+        <br><br>
         <button class="button is-success">
             Create Article
         </button>
@@ -15,9 +16,13 @@
 
 <script>
     const blog = document.querySelector('form')
+    const error = document.getElementById('error')
     
     blog.addEventListener('submit', async (e) => {
         e.preventDefault();
+
+        // Reset Error
+        error.innerHTML = ''
 
         // Get the Value
         const tittle = blog.tittle.value;
@@ -33,12 +38,15 @@
             body: JSON.stringify({ tittle, content })
         })
         const data = await res.json()
+            if(data.error) {
+                error.innerHTML = data.error
+            }
             if(data.article) {
                 location.assign('/blogs')
             }
         }
-        catch (err) {
-            console.info(err)
+        catch (error) {
+            console.info(error)
         }
     })
 </script>
