112: react POST API

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -48,6 +48,9 @@
                                 <a href="/blogs" class="navbar-item">
                                     Blog
                                 </a>
+                                <form action="/search/" class="navbar-item">
+                                    <input class="input is-rounded" type="text" name="article" id="search" placeholder="Search">
+                                </form>
                             {{/if}}
 
                         </div>
